
[AAAA] added /pay <name> <amount>,/addmoney <name> <amount> ,/rmvmoney <name> <amount> - removes money
       /balance,/resetmoney <name> - set there money to 0
    
[AAAA] added AccountMaker handler.

[AAAA] Implimented the Config. 

[AAAA] Added a cancellable PMEvent thats is triggered when ever a pm is sent. You can catch it with a EventHandler.

[Abiram] Added Config code for Money (enable-option), ToolUseBlocker (enable-option, array of ID's), BlockPlaceBlocker (enable-option, array of ID's)

[AAAA] Tested most of the commands and everything works good. Nice job TheMushyPeas and Abiram

[AAAA] Fixed a bug with the command /pm. I deleted /thru from the PlannedFeatures because you need to be able
       to know which direction the player is facing and its not possible to see that with the current server api.
       
[AAAA] Added death,command,pvp,killed Logs but killed is not working because i have to find a way to detect when a player killed a player

[AAAA] /kill now teleports the player under the world causing them to die instantly.

[mushy] Now the PM system can be disabled

[mushy] Added block place/break logging support. Thanks to Abiram for providing the original source on the forums!

[AAAA] Fixed some errors with github.

[AAAA] Changed a class values to private remeber to make them private in the future

[AAAA] Added /report <player> <name>,/vwreport - view all reports,/vwreport <num> - view a specific report,/delreport <num> - delete a report

[mushy] Added /coords <player>. This will return the coordinated of the specified player (Doh!) This is useful if server owners want players to find each other,
        but whant to make it harder than just teleporting. Then a bit of "old school" navigation is requried! :)
       
[mushy] Added some extra debug info on server shutdown

[AAAA] Added the config file reader so you can disable/enable any feature you want.

[AAAA] Changed the logging system i will add the api so other plugins can use it later.