@@ -1,0 +1,13 @@
+package plugins.mbes.managers;
+
+import java.util.HashMap;
+import java.util.Map;
+
+public class ChatReplacer {
+	private Map<String,String>words = new HashMap<String, String>();
+	
+	public Map<String,String> getMap(){
+		return words;
+	}
+	
+}
